--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "monitor",
     "node"
   ],
-  "author": "Peter Banigo",
+  "author": "Nguyen Thai An",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
